# unis

./: .gitignore  Cargo.toml  publish.sh
aggregate/: Cargo.toml
aggregate/src/: note.rs
bank/domain/: Cargo.toml
bank/domain/src/: account.rs  transaction.rs
bank/domain/src/account/: approve.rs  create.rs  limit.rs  verify.rs
bank/domain/src/transaction/: change_limit.rs  deposit.rs  init.rs  open.rs  set_limit.rs  set_trans_limit.rs  transfer_in.rs  transfer_out.rs  withdraw.rs
bank/k6/: account.js  package-lock.json  package.json  transaction.js
bank/k6/lib/: k6-utils.js
bank/kafka-init/: Cargo.toml
bank/kafka-init/src/: main.rs
bank/kafka-projector/: Cargo.toml
bank/kafka-projector/config/: default.toml
bank/kafka-projector/src/: main.rs
bank/kafka-sender/: Cargo.toml
bank/kafka-sender/config/: default.toml  i18n.toml
bank/kafka-sender/src/: account.rs  handlers.rs  main.rs  routes.rs  tests.rs  transaction.rs  v1.rs
bank/kafka-sender/src/handlers/: account.rs  transaction.rs
bank/kafka-sender/src/routes/: account.rs  transaction.rs
bank/kafka-sender/src/tests/: account.rs  i18n.rs  transaction.rs
bank/kafka-sender/src/tests/account/: account_init.rs
bank/kafka-subscriber/: Cargo.toml
bank/kafka-subscriber/config/: default.toml
bank/kafka-subscriber/src/: main.rs
demo/bank/: Cargo.toml
demo/bank/src/: account.rs  transaction.rs
demo/bank/src/account/: approve.rs  create.rs  limit.rs  verify.rs
demo/bank/src/transaction/: change_limit.rs  deposit.rs  init.rs  open.rs  set_limit.rs  set_trans_limit.rs  transfer_in.rs  transfer_out.rs  withdraw.rs
demo/kafka-projector/: Cargo.toml
demo/kafka-sender/: Cargo.toml
demo/kafka-subscriber/: Cargo.toml
domain/: Cargo.toml
domain/config/: i18n.toml
domain/proptest-regressions/account/: tests.txt
domain/src/: account.rs  lib.rs  note.rs  tests.rs  transaction.rs  validate.rs
domain/src/account/: approve.rs  create.rs  limit.rs  tests.rs  verify.rs
domain/src/transaction/: change_limit.rs  deposit.rs  init.rs  open.rs  set_limit.rs  set_trans_limit.rs  tests.rs  transfer_in.rs  transfer_out.rs  withdraw.rs
domain/tests/: test_main.rs
domain/tests/account/: approve.rs  create.rs  limit.rs  mod.rs  verify.rs
domain/tests/transaction/: change_limit.rs  deposit.rs  init.rs  mod.rs  open.rs  set_limit.rs  set_trans_limit.rs  transfer_in.rs  transfer_out.rs  withdraw.rs
examples/: Cargo.toml  aggregate.rs  aggregator.rs  command.rs
grafana/: collector-config.yml  docker-compose.yml  grafana-datasources.yml  loki-config.yml  tempo-config.yml
helm/kafka/: Chart.yaml  values.yaml
helm/kafka-ui/: Chart.yaml  values.yaml
helm/kafka-ui/templates/: _helpers.tpl  _names.tpl  configmap.yaml  deployment.yaml  service.yaml
helm/kafka/templates/: _helpers.tpl  _secrets.tpl  _utils.tpl  configmap.yaml  scripts-configmap.yaml  secrets.yaml  statefulset.yaml  svc-headless.yaml
note/: Cargo.toml
unis/: Cargo.toml
unis-kafka/: Cargo.toml
unis-kafka/config/: default.toml
unis-kafka/src/: commit.rs  config.rs  errors.rs  lib.rs  pool.rs  projector.rs  reader.rs  sender.rs  stream.rs  subscriber.rs  tests.rs  topic.rs
unis-kafka/src/projector/: app.rs  core.rs
unis-kafka/src/sender/: app.rs  core.rs  macros.rs
unis-kafka/src/subscriber/: app.rs  core.rs  pool.rs  reader.rs  stream.rs  tests.rs  topic.rs
unis-kafka/src/subscriber/tests/: restore_test.rs  stream_test.rs
unis-kafka/src/tests/: reader_test.rs  stream_test.rs  topic_test.rs
unis-kafka/tests/: config_tests.rs  core_integration.rs  kafka_access.rs  note_init.rs  subscriber_tests.rs
unis-kafka/tests/common/: mod.rs
unis-macros/: Cargo.toml
unis-macros/src/: lib.rs
unis-test/: Cargo.toml
unis-test/src/: kube.rs
unis-utils/: Cargo.toml
unis-utils/src/: command.rs  kube.rs  lib.rs
unis/config/: default.toml
unis/src/: aggregator.rs  app.rs  axum.rs  config.rs  domain.rs  errors.rs  i18n.rs  kafka.rs  lib.rs  pool.rs  request.rs  response.rs  sender.rs  subscriber.rs  test_utils.rs  worker.rs
unis/src/kafka/: commit.rs  config.rs  errors.rs  pool.rs  reader.rs  sender.rs  stream.rs  subscriber.rs  writer.rs
unis/src/test_utils/: command.rs  kube.rs
unis/tests/: aggregator_tests.rs  subscriber_tests.rs
unis/tests/common/: mod.rs  note.rs  stream.rs
