[workspace]
resolver = "3"
members = [
    "unis",
    "unis-macros",
    "unis-kafka",
    "unis-utils",
    "note",
    "bank/domain",
    "bank/kafka-projector",
    "bank/kafka-subscriber",
    "bank/kafka-sender",
]
default-members = ["unis", "unis-macros", "unis-kafka", "unis-utils"]

[workspace.package]
edition = "2024"
authors = ["Eric"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uniTravel/unis"

[workspace.dependencies]
unis = { version = "0.1.2", path = "./unis" }
unis-macros = { version = "0.1.2", path = "./unis-macros" }
unis-kafka = { version = "0.1.2", path = "./unis-kafka" }
unis-utils = { version = "0.1.0", path = "./unis-utils" }

uuid = { version = "1.0", features = ["v4", "serde"] }
ahash = "0.8"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8"

tokio = { version = "1.0", features = ["full"] }
axum = "0.8"

tracing = { version = "0.1", features = ["release_max_level_info", "valuable"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0"

config = "0.15"
validator = { version = "0.20", features = ["derive"] }

rstest = "0.26"
