[package]
name = "domain"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-utils = ["dep:proptest", "dep:proptest-state-machine"]

[dependencies]
unis.workspace = true

uuid.workspace = true
chrono.workspace = true
ahash.workspace = true
serde.workspace = true
rkyv.workspace = true
validator.workspace = true
utoipa.workspace = true

proptest = { workspace = true, optional = true }
proptest-state-machine = { workspace = true, optional = true }

[dev-dependencies]
unis = { workspace = true, features = ["domain-test"] }
domain = { path = ".", features = ["test-utils"] }
