[package]
name = "unis-kafka"
description = "unis框架的Kafka实现。"
version = "0.1.2"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
subscriber = []
sender = []
projector = []
test-utils = []

[dependencies]
rdkafka = "0.38"

unis.workspace = true

uuid.workspace = true
ahash.workspace = true
crossbeam.workspace = true
rkyv.workspace = true
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true

config.workspace = true

[dev-dependencies]
domain = { path = "../bank/domain" }
unis.workspace = true
unis-utils.workspace = true
unis-kafka = { workspace = true, features = [
    "subscriber",
    "sender",
    "projector",
    "test-utils",
] }
rstest.workspace = true
