[package]
name = "unis-kafka"
description = "unis框架的Kafka实现。"
version = "0.1.7"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
subscriber = ["unis/subscriber"]
sender = ["unis/sender"]
projector = []
test-utils = ["unis/test-utils"]
full = ["subscriber", "sender", "projector", "test-utils"]

[dependencies]
unis.workspace = true

uuid.workspace = true
ahash.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
rkyv.workspace = true
tokio.workspace = true
rdkafka.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true

config.workspace = true

[dev-dependencies]
domain = { path = "../domain" }
unis = { workspace = true, features = ["full"] }
unis-kafka = { path = ".", features = ["full"] }
unis-utils.workspace = true

rstest.workspace = true
