[package]
name = "unis"
description = "轻量级CQRS框架。"
version = "0.1.2"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-utils = []

[dependencies]
unis-macros.workspace = true

uuid.workspace = true
ahash.workspace = true
serde.workspace = true
rkyv.workspace = true
tokio.workspace = true
axum.workspace = true

tracing.workspace = true
thiserror.workspace = true

config.workspace = true
validator.workspace = true
