[package]
name = "unis"
description = "轻量级CQRS框架。"
version = "0.1.9"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
subscriber = []
sender = []
axum = ["dep:axum", "dep:tower", "sender"]
test-utils = []
full = ["subscriber", "sender", "test-utils"]

[dependencies]
unis-macros.workspace = true

uuid.workspace = true
ahash.workspace = true
dashmap.workspace = true
tokio.workspace = true
serde.workspace = true
rkyv.workspace = true
config.workspace = true
validator.workspace = true
http.workspace = true

axum = { workspace = true, optional = true }
tower = { version = "0.5", features = ["util"], optional = true }

tracing.workspace = true
thiserror.workspace = true
