[package]
name = "kafka-projector"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unis-kafka = { workspace = true, features = ["projector"] }
domain = { path = "../../domain" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true
axum.workspace = true
