[package]
name = "kafka-sender"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unis = { workspace = true, features = ["sender"] }
unis-kafka = { workspace = true, features = ["sender"] }
domain = { path = "../../domain" }

uuid.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[dev-dependencies]
unis = { workspace = true, features = ["test-utils"] }
unis-kafka = { workspace = true }

rstest.workspace = true
proptest.workspace = true
proptest-state-machine.workspace = true
uuid.workspace = true
rkyv.workspace = true
serde.workspace = true
