[package]
name = "kafka-subscriber"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unis-kafka = { workspace = true, features = ["subscriber"] }
domain = { path = "../domain" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
